--- a/src/app/paises/pages/selector-page/selector-page.component.html
+++ b/src/app/paises/pages/selector-page/selector-page.component.html
@@ -1,18 +1,57 @@
 <h1 class="mt-5">Selectores anidados</h1>
 <hr>
 
-<form [formGroup]="miFormulario" >
+<form [formGroup]="miFormulario" (ngSubmit)="guardar()" >
 
-<div class="row mb-3" >
+<div class="row mb-3" *ngIf="regiones.length !== 0" >
     <div class="col">
         <label class="form-label">Continente</label>
         <select class="form-control"
         formControlName="region">
             <option value=""> -- Seleccione Continente --</option>
-            <option value="1"> América </option>
+            <option *ngFor="let region of regiones"
+                    [value]="region | lowercase "> {{ region }} </option>
         </select>
     </div>
 </div>
+
+    <!-- Paises -->
+<div class="row mb-3" *ngIf="paises.length !== 0" >
+    <div class="col">
+        <label class="form-label">País</label>
+        <select class="form-control"
+        formControlName="pais">
+            <option value=""> -- Seleccione País --</option>
+            <option *ngFor="let pais of paises"
+                    [value]="pais.ccn3 "> {{ pais.name.common }} </option>
+        </select>
+    </div>
+</div>
+
+    <!-- Frontera -->
+<div class="row mb-3" *ngIf="fronteras.length !== 0"  >
+    <div class="col">
+        <label class="form-label">Frontera</label>
+        <select class="form-control"
+
+            formControlName="frontera">
+            <option value=""> -- Seleccione la frontera --</option>
+            <option *ngFor="let frontera of fronteras"
+                    [value]="frontera.ccn3"> {{ frontera.name.common }} </option>
+        </select>
+    </div>
+</div>
+
+
+<div class="row" *ngIf="cargando">
+    <div class="col">
+        <div class="alert alert-primary">
+            Cargando...
+        </div>
+    </div>
+</div>
+
+
 
 <div class="row">
     <div class="col">
